--- a/styles.css
+++ b/styles.css
@@ -92,4 +92,69 @@ body{
     padding:30px;
     background-color: #19456b;
 }
-   
+.mu{
+    text-align:center;
+    background-color:#03506f;
+    padding:20px;
+    padding-bottom:100px;
+    z-index:-1;
+    color:white;
+}
+.inp {
+display:block;
+margin:10px auto;
+    
+}
+input{
+    width:30rem;
+}
+.container-fluid{
+    z-index:0;
+    position:relative;
+    top:-80px;
+    background-color:white;
+}
+textarea{
+    height:10rem;
+    width:30rem;
+}
+.border{
+    border:2px solid black;
+    padding:10px;
+    width:50%;
+    justify-content:center;
+}
+.mu{
+    text-align:center;
+    background-color:#03506f;
+    padding:20px;
+    padding-bottom:100px;
+    z-index:-1;
+    color:white;
+}
+.inp {
+display:block;
+margin:10px auto;
+    
+}
+input{
+    width:30rem;
+}
+.container-fluid{
+    z-index:0;
+    position:relative;
+    top:-80px;
+    background-color:white;
+}
+textarea{
+    height:10rem;
+    width:30rem;
+}
+.border{
+    border:2px solid black;
+    padding:10px;
+    width:50%;
+    justify-content:center;
+}
+
+
